Fix anchor list alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ body {
 /* Remove bullet points from ul */
 ul {
   list-style: none;
+  padding: 0px;
 }
 
 /* Header & Anchor styles*/
@@ -39,7 +40,7 @@ h1 {
   padding: 20px;
   border-radius: 5cm 2cm 5cm 2cm;
   border-width: 20px 10px 10px 10px;
-  width: 450px;
+  width: 365px;
   margin: 20px auto 100px auto;
 }
 
@@ -58,7 +59,7 @@ a {
   text-decoration: none;
   /* Border, padding and margin */
   border-radius: 30px;
-  padding: 20px;
+  padding: 7px 0px;
   width: 300px;
   margin: 30px auto 30px auto;
 }
